[gd_scene load_steps=18 format=2]

[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ice Zombie.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ice Zombie.gd" type="Script" id=3]
[ext_resource path="res://MC_Sprite.tscn" type="PackedScene" id=4]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=5]
[ext_resource path="res://Elevator.tscn" type="PackedScene" id=6]
[ext_resource path="res://Elevator.gd" type="Script" id=7]
[ext_resource path="res://images/Environment/Level3Text.bmp" type="Texture" id=8]
[ext_resource path="res://updatedTileSet.tres" type="TileSet" id=9]
[ext_resource path="res://CoinObject.tscn" type="PackedScene" id=10]
[ext_resource path="res://Coin.gd" type="Script" id=11]
[ext_resource path="res://Follower.tscn" type="PackedScene" id=12]
[ext_resource path="res://Follower.gd" type="Script" id=13]
[ext_resource path="res://NewNPCKinematicBody2D.gd" type="Script" id=14]
[ext_resource path="res://images/NPC/DolphinNPC/DolphinNPC2.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 19.933
height = 14.6627

[node name="Level3" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="." instance=ExtResource( 1 )]
scroll_base_scale = Vector2( 0.5, 0.5 )

[node name="Ice Zombie" type="Area2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 194.856, 224.999 )
script = ExtResource( 3 )

[node name="MC_Sprite" type="KinematicBody2D" parent="." groups=[
"player",
] instance=ExtResource( 4 )]
position = Vector2( 141.157, 214.262 )
z_index = 1
z_as_relative = false
script = ExtResource( 5 )

[node name="Elevator" type="Area2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 57.3402, 203.967 )
scale = Vector2( 0.975581, 0.973929 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}
elevator_L = "res://world.tscn"
elevator_1 = "res://Level1.tscn"
elevator_2 = "res://Level2.tscn"
elevator_3 = "res://Level3.tscn"

[node name="Level3Text" type="Sprite" parent="."]
position = Vector2( 273.5, 63.5 )
scale = Vector2( 3.34375, 2.20833 )
texture = ExtResource( 8 )

[node name="BrandonEditTileMap" type="TileMap" parent="."]
position = Vector2( 118.583, -130.274 )
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 589815, 0, 0, 655351, 0, 0, 720887, 0, 0, 786423, 0, 0, 851959, 0, 0, 917495, 0, 0, 983031, 0, 0, 1048567, 0, 0, 1114103, 0, 0, 1179639, 0, 0, 1245175, 0, 0, 1310711, 0, 0, 1376247, 0, 0, 1310739, 0, 0, 1441783, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1507319, 0, 0, 1441809, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1572855, 0, 0, 1572856, 0, 0, 1572857, 0, 0, 1572858, 0, 0, 1572859, 0, 0, 1572860, 0, 0, 1572861, 0, 0, 1572862, 0, 0, 1572863, 0, 0, 1507328, 0, 0, 1507329, 0, 0, 1507330, 0, 0, 1507331, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 0, 0, 1507344, 0, 0, 1507345, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1638391, 0, 0, 1638392, 0, 0, 1638393, 0, 0, 1638394, 0, 0, 1638395, 0, 0, 1638396, 0, 0, 1638397, 0, 0, 1638398, 0, 0, 1638399, 0, 0, 1572883, 0, 0, 1638419, 0, 0, 1703955, 0, 0, 1769491, 0, 0, 1769492, 0, 0, 1769493, 0, 0, 1769494, 0, 0, 1769495, 0, 0, 1769496, 0, 0, 1769497, 0, 0, 1769498, 0, 0, 1769499, 0, 0, 1769500, 0, 0, 1769501, 0, 0, 1769502, 0, 0, 1769503, 0, 0, 1769504, 0, 0, 1769505, 0, 0, 1769506, 0, 0, 1769507, 0, 0, 1769508, 0, 0, 1769509, 0, 0, 1769510, 0, 0, 1769511, 0, 0, 1769512, 0, 0, 1769513, 0, 0, 1769514, 0, 0, 1769515, 0, 0, 1769516, 0, 0, 1769517, 0, 0, 1769518, 0, 0, 1769519, 0, 0, 1769520, 0, 0, 1769521, 0, 0, 1769522, 0, 0, 1769523, 0, 0, 1769524, 0, 0, 1769525, 0, 0, 1769526, 0, 0, 1769527, 0, 0, 1769528, 0, 0, 1769529, 0, 0, 1769530, 0, 0, 1769531, 0, 0, 1769532, 0, 0, 1769533, 0, 0, 1769534, 0, 0, 1769535, 0, 0, 1769536, 0, 0, 1769537, 0, 0, 1769538, 0, 0, 1769539, 0, 0, 1769540, 0, 0, 1769541, 0, 0, 1769542, 0, 0, 1769543, 0, 0, 1769544, 0, 0, 1769545, 0, 0, 1769546, 0, 0, 1769547, 0, 0, 1769548, 0, 0, 1769549, 0, 0, 1769550, 0, 0, 1769551, 0, 0, 1769552, 0, 0, 1769553, 0, 0, 1769554, 0, 0 )

[node name="CoinObject" type="StaticBody2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 470.325, -257.629 )
script = ExtResource( 11 )

[node name="CoinObject11" type="StaticBody2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 470.325, -287.629 )
script = ExtResource( 11 )

[node name="CoinObject9" type="StaticBody2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 410.325, -217.629 )
script = ExtResource( 11 )

[node name="CoinObject6" type="StaticBody2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 430.325, -187.629 )
script = ExtResource( 11 )

[node name="CoinObject7" type="StaticBody2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 550.325, -187.629 )
script = ExtResource( 11 )

[node name="CoinObject2" type="StaticBody2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 508.56, -257.629 )
script = ExtResource( 11 )

[node name="CoinObject10" type="StaticBody2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 508.56, -287.629 )
script = ExtResource( 11 )

[node name="CoinObject8" type="StaticBody2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 572.753, -217.629 )
script = ExtResource( 11 )

[node name="CoinObject3" type="StaticBody2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 460.325, -177.629 )
script = ExtResource( 11 )

[node name="CoinObject4" type="StaticBody2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 490.325, -177.629 )
script = ExtResource( 11 )

[node name="CoinObject5" type="StaticBody2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 520.325, -177.629 )
script = ExtResource( 11 )

[node name="Follower" type="KinematicBody2D" parent="." instance=ExtResource( 12 )]
position = Vector2( 144.333, 228.988 )
collision_layer = 0
script = ExtResource( 13 )

[node name="NPC Movement" type="KinematicBody2D" parent="."]
position = Vector2( 357.428, 209.333 )
script = ExtResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="NPC Movement"]
frames = SubResource( 1 )
animation = "idle"
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC Movement"]
position = Vector2( -0.93294, 0.47929 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Ice Zombie" to="Ice Zombie" method="_on_Ice_Zombie_body_entered"]
[connection signal="body_exited" from="Ice Zombie" to="Ice Zombie" method="_on_Ice_Zombie_body_exited"]
[connection signal="body_entered" from="Elevator" to="Elevator" method="_on_Elevator_body_entered"]
[connection signal="body_exited" from="Elevator" to="Elevator" method="_on_Elevator_body_exited"]
